--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.8.1,<4.0"
 
 [tool.poetry.scripts]
 gendiff = "gendiff-python-project.scripts.gendiff:main"
